# Assignment_2

./: .gitignore  README.md  evaluation.txt  main.py  pyproject.toml  vocab.json
