[project]
name = "assignment-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "emoji>=2.15.0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "nltk>=3.9.1",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]
